recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:8: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche();
        ^FourSquare:10: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche();
        ^